@@ -43,7 +43,7 @@ image(Width, Height, Pixels, [Width, Height, Pixels]).
 
 % ------------------------------------- 3. IsBitmap? ----------------------------------------------------
 
-imageIsBitmap([Width,Height,Pixels]):- pixbit_list(Pixels).
+imageIsBitmap([_,_,Pixels]):- pixbit_list(Pixels).
 
 % -------------------------------------------------------------------------------------------------------
 
@@ -88,7 +88,16 @@ NewY is Height-1-Y,imageFlipV([Width,Height,Pixels],[Width, Height, P1]).
 
 % ----------------------------------------- 9. crop -----------------------------------------------------
 
+discardPixels([],X1,Y1,X2,Y2,[]).
 
+discardPixels([[X,Y,Color,Depth]|Pixels],X1,Y1,X2,Y2,P1):- ((X2 < X; X < X1); (Y2 < Y; Y < Y1)),
+discardPixels(Pixels,X1,Y1,X2,Y2,P1).
+
+discardPixels([[X,Y,Color,Depth]|Pixels],X1,Y1,X2,Y2,[[X,Y,Color,Depth]|P1]):- X1 @=< X, X @=< X2, Y1 @=< Y, Y @=< Y2,
+discardPixels(Pixels,X1,Y1,X2,Y2,P1).
+
+imageCrop([Width,Height,Pixels],X1,Y1,X2,Y2,[Width2,Height2,Pixels2]):- Width2 is X2 - X1 + 1, Height2 is Y2 - Y1 + 1,
+discardPixels(Pixels,X1,Y1,X2,Y2,Pixels2).
 
 % -------------------------------------------------------------------------------------------------------
 
