@@ -7,3 +7,4 @@ Código:
 	06/10/2022: Bitmap, Hexmap y Pixmap agregadas
 	07/10/2022: imageFlipH agregado
 	08/10/2022: imageFlipV agregado
+	09/10/2022: imageCrop agregado
